test/SemanticAnalysis/LifetimeMethods/InvalidConstnessMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__move' has incorrect const predicate
	TestClass __move() const noexcept {
		return @();
	}
}

// CHECK: 1 error generated.
